--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </div>
             </div>
         </div>
-            <div><img  class="love-img" src="../images/architect.png" alt=""></div>
+            <div><img  class="love-img" src="./images/architect.png" alt=""></div>
         
         <!-- hirrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr -->
 
@@ -125,12 +125,12 @@
         <div class="icon-info">projects</div>
     </div>
     <div class="single-icons">
-         <img src="../images/icons/email.png"> 
+         <img src="./images/icons/email.png"> 
         <div class="icon-number">845</div>
         <div class="icon-info">email</div>
     </div>
     <div class="single-icons">
-         <img src="../images/icons/ribon.png"> 
+         <img src="./images/icons/ribon.png"> 
         <div class="icon-number">945</div>
         <div class="icon-info">ribon</div>
     </div>
